// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolutionBox render() handles default 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-checkmark"
  />
  <p>
    This issue has been marked as resolved.
  </p>
</div>
`;

exports[`ResolutionBox render() handles inNextRelease 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-checkmark"
  />
  <p>
    This issue has been marked as resolved in the upcoming release.
  </p>
</div>
`;

exports[`ResolutionBox render() handles inNextRelease with actor 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-checkmark"
  />
  <p>
    <span
      key="3"
    >
      <strong
        key="0"
      >
        <Avatar
          className="avatar"
          hasTooltip={false}
          size={20}
          user={
            Object {
              "email": "david@sentry.io",
              "id": "111",
              "name": "David Cramer",
            }
          }
        />
        <span
          style={
            Object {
              "marginLeft": 5,
            }
          }
        >
          David Cramer
        </span>
      </strong>
      <span
        key="1"
      >
         marked this issue as resolved in the upcoming release.
      </span>
    </span>
  </p>
</div>
`;

exports[`ResolutionBox render() handles inRelease 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-checkmark"
  />
  <p>
    <span
      key="4"
    >
      <span
        key="0"
      >
        This issue has been marked as resolved in version 
      </span>
      <Version
        anchor={true}
        key="1"
        orgId="org"
        projectId="project"
        version="1.0"
      />
      <span
        key="2"
      >
        .
      </span>
    </span>
  </p>
</div>
`;

exports[`ResolutionBox render() handles inRelease with actor 1`] = `
<div
  className="box"
>
  <span
    className="icon icon-checkmark"
  />
  <p>
    <span
      key="5"
    >
      <strong
        key="0"
      >
        <Avatar
          className="avatar"
          hasTooltip={false}
          size={20}
          user={
            Object {
              "email": "david@sentry.io",
              "id": "111",
              "name": "David Cramer",
            }
          }
        />
        <span
          style={
            Object {
              "marginLeft": 5,
            }
          }
        >
          David Cramer
        </span>
      </strong>
      <span
        key="1"
      >
         marked this issue as resolved in version 
      </span>
      <Version
        anchor={true}
        key="2"
        orgId="org"
        projectId="project"
        version="1.0"
      />
      <span
        key="3"
      >
        .
      </span>
    </span>
  </p>
</div>
`;
